# qishes

./: .gitignore  .gitmodules  CMakeLists.txt  DESIGN.md  NOTES.md  README.md
.gitea/workflows/: baseline.yaml
cmake/: RpathDefinitions.cmake
components/: CMakeLists.txt
components/libgachafs/: CMakeLists.txt
components/libgachafs/src/: gachafs.cpp
components/libgachafs/src/include/: egachafs.h  gachafs.h
components/libgachasteam/: CMakeLists.txt
components/libgachasteam/src/: gachasteam.cpp  steam_environment.cpp
components/libgachasteam/src/include/: gachasteam.h  steam_environment.cpp  steam_environment.h
components/libgachasteamstuff/: CMakeLists.txt
components/libgachasteamstuff/src/: gachasteam.cpp
components/libgachasteamstuff/src/include/: gachasteam.h
components/libqisheslauncher/: CMakeLists.txt
components/libqisheslauncher/include/: about.h
components/libqisheslauncher/include/data/: Settings.h
components/libqisheslauncher/include/data/remote/: RemoteCommon.h
components/libqisheslauncher/include/data/remote/game/: GameDL.h
components/libqisheslauncher/include/data/remote/runners/: RunnerCommon.h
components/libqisheslauncher/include/resources/: stylesheets.h
components/libqisheslauncher/include/ui/: Landing.h
components/libqisheslauncher/include/util/: Constants.h
components/libqisheslauncher/src/data/: Settings.cpp  SettingsData.cpp
components/libqisheslauncher/src/data/remote/: RemoteCommon.cpp
components/libqisheslauncher/src/data/remote/game/: GameDL.cpp
components/libqisheslauncher/src/data/remote/runners/: Proton.cpp  RunnerCommon.cpp  Wine.cpp
components/libqisheslauncher/src/process/: launch.cpp  process.cpp
components/libqisheslauncher/src/resources/: SASSProcess.cpp
components/libqisheslauncher/src/ui/: Landing.cpp  Splash.cpp
components/libqisheslauncher/src/ui/settings/util/: SettingsCheckbox.cpp
components/libsteamintegration/: CMakeLists.txt
components/libsteamintegration/src/: steam_environment.cpp  steam_integration.cpp  steam_proton.cpp
components/libsteamintegration/src/include/: steam_environment.h  steam_integration.h  steam_proton.h
components/libsteamintegration/tools/: restore_soname.sh
components/libvlvproton/: CMakeLists.txt
components/libvlvproton/src/: proton.cpp  vlvproton.cpp  wine.cpp
components/libvlvproton/src/include/: proton.h  vlvproton.h  wine.h
src/: qmain.cpp
src/commands/: AbstractCommand.cpp  DaemonCommand.cpp  DataCommand.cpp  HistoryCommand.cpp  LauncherCommand.cpp
src/data/: wishlog.cpp
src/include/: common.h
src/include/commands/: AbstractCommand.h  DaemonCommand.h  DataCommand.h  HistoryCommand.h  LauncherCommand.h
src/include/data/: wishlog.h
src/include/util/: Discord.h  log.h
src/util/: Discord.cpp  log.cpp
